# log-light-state

./: .gitignore  .mergify.yml  Cargo.toml  Makefile  README.md
.github/workflows/: build-releases.yml  commit-message.yml  test-and-tag.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: main.rs
