[package]
name = "log-light-state"
version = "1.0.6"
edition = "2018"
authors = [ "Billie Thompson <billie+git-mit@billiecodes.com>" ]
license = "Creative Commons Zero v1.0 Universal"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "ai", "neural-networks" ]
readme = "README.md"
homepage = "https://github.com/PurpleBooth/log-light-state"
repository = "git@github.com:PurpleBooth/log-light-state.git"
description = "log-light-state is a tool to generate a CSV of all your hue light states every minuit. The intention is that you'd use that log for training neural networks and similar."

[dependencies]
hueclient = "0.3.8"
chrono = "0.4.13"
clap = "2.33.1"
indicatif = "0.15.0"
spa = "0.2.0"
reqwest = "0.10.6"
serde_json = "1.0"
csv = "1.1.3"
url = "2.1.1"

  [dependencies.serde]
  version = "1.0.114"
  features = [ "derive" ]
