[package]
name = "log-light-state"
version = "1.0.44"
edition = "2018"
authors = [ "Billie Thompson <billie+git-mit@billiecodes.com>" ]
license = "Creative Commons Zero v1.0 Universal"
categories = [ "development-tools", "command-line-utilities" ]
keywords = [ "ai", "neural-networks" ]
readme = "README.md"
homepage = "https://github.com/PurpleBooth/log-light-state"
repository = "git@github.com:PurpleBooth/log-light-state.git"
description = "log-light-state is a tool to generate a CSV of all your hue light states every minuit. The intention is that you'd use that log for training neural networks and similar."

[dependencies]
hueclient = "0.3.10"
chrono = "0.4.19"
clap = "2.33.3"
indicatif = "0.15.0"
spa = "0.2.0"
serde_json = "1.0.62"
csv = "1.1.5"
url = "2.2.1"

  [dependencies.reqwest]
  version = "0.11.0"
  features = [ "blocking", "json" ]

  [dependencies.serde]
  version = "1.0.123"
  features = [ "derive" ]
